--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ section{
     height: 400px;
     background-color: green;
 }
+section>div{
+    width: 200px;
+    height: 350px;
+    border: 2px black solid;
+}
 figure{
     height: 400px;
 }
