--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,11 @@ nav{
 }
 section{
     align-items: center;
-    height: 400px;
     background-color: green;
 }
 section>div{
     height: 350px;
-    border: 2px black solid;
+    border: 1px black solid;
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -29,9 +28,7 @@ section>div{
 }
 
 /* section 2 */
-figure{
-    height: 400px;
-}
+
 figure> div{
     text-align: center; 
 }
@@ -39,23 +36,27 @@ figure .box{
     height: 160px;
     border: 1px black solid;
 } 
-figure .box:nth-child(1){
+figure .box:nth-child(1){  
     background-color: brown;
 }
 figure .box:nth-child(2){
     background-color: rgb(84, 172, 223);
-}figure .box:nth-child(3){
+}
+figure div .box:nth-child(3){
     background-color: rgb(0, 0, 0);
-}figure .box:nth-child(4){
+}
+figure .box:nth-child(4){
     background-color: rgb(43, 123, 177);
-}figure .box:nth-child(5){
+}
+figure .box:nth-child(5){
     background-color: rgb(52, 109, 214);
-}figure .box:nth-child(6){
+}
+figure .box:nth-child(6){
     background-color: rgb(204, 147, 164);
 }
+
 /* section 3 */
 article{
-    height: 400px;
     background-color: green;
     text-align: center;
 }
