--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-.container{
-    border: 1px solid black;
-}
 
 /* start utility class */
 
@@ -9,17 +6,17 @@
 /* end utility class */
 
 /* section 1 */
-nav{
-    height: 60px;
-    background-color: rgb(12, 12, 51);
+.navbar{  
+    background-color: rgb(19, 19, 83);
+}
+.navbar-collapse{
+    flex-grow: 0;
 }
 section{
     align-items: center;
     background-color: rgb(34, 197, 116);
 }
 section>div{
-    height: 350px;
-   
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -32,27 +29,42 @@ section>div{
 figure> div{
     text-align: center; 
 }
-figure .box{
-    height: 160px;
-    
-} 
-figure .box:nth-child(1){  
-    background-color: brown;
+
+figure .color-1{  
+    background-color: rgb(179, 122, 122);
+    height: 260px;  
+    margin-bottom: 24px;
+    border-radius: 15px;
 }
-figure .box:nth-child(2){
+figure .color-2{
     background-color: rgb(84, 172, 223);
+    height: 260px;  
+    margin-bottom: 24px;
+    border-radius:15px;
 }
-figure div .box:nth-child(3){
+figure .color-3{
     background-color: rgb(0, 0, 0);
+    height: 260px;  
+    margin-bottom: 24px;
+    border-radius:15px;
 }
-figure .box:nth-child(4){
+figure .color-4{
     background-color: rgb(43, 123, 177);
+    height: 260px;  
+    margin-bottom: 24px;
+    border-radius:15px;
 }
-figure .box:nth-child(5){
+figure .color-5{
     background-color: rgb(52, 109, 214);
+    height: 260px;  
+    margin-bottom: 24px;
+    border-radius:15px;
 }
-figure .box:nth-child(6){
+figure .color-6{
     background-color: rgb(204, 147, 164);
+    height: 260px;  
+    margin-bottom: 24px;
+    border-radius:15px;
 }
 
 /* section 3 */
@@ -68,12 +80,20 @@ article .box{
 
 /* section 4 */
 .contact{
+    
+    text-align: center;
     height: 400px;
 }
-.contact div{
-    border: 1px black solid;
+.contact div h1{
+    margin: 20px 0px;
 }
-
+.input> input{
+    width: 100%;
+    border: none;
+    border-bottom: 1px black solid;
+   
+    
+}
 /* footer */
 footer .top-footer{
     text-align: center;  
