--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
 
 /* start utility class */
+.center-star{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+}
 hr{
   width: 150px;
   border: 1px white solid;  
   margin: 0px 10px;
-  opacity: 1;
-  
-  
+  opacity: 1; 
 }
-
+.hr-black{
+    width: 150px;
+    border: 1px rgb(0, 0, 0) solid;  
+    margin: 0px 20px;
+    opacity: 1; 
+}
 
 /* end utility class */
 
@@ -34,12 +43,7 @@ section>div svg{
     margin-top: 80px;
     margin-bottom: 20px;
 }
-.center-star{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-}
+
 section>div span{
     padding-bottom: 10px;
 }
@@ -47,43 +51,13 @@ section>div span{
 
 figure>div{
     text-align: center; 
+    margin-top: 30px;
 }
-
-figure .color-1{  
-    background-color: rgb(179, 122, 122);
-    height: 260px;  
-    margin-bottom: 24px;
-    border-radius: 15px;
-}
-figure .color-2{
-    background-color: rgb(84, 172, 223);
-    height: 260px;  
-    margin-bottom: 24px;
-    border-radius:15px;
-}
-figure .color-3{
-    background-color: rgb(0, 0, 0);
-    height: 260px;  
-    margin-bottom: 24px;
-    border-radius:15px;
-}
-figure .color-4{
-    background-color: rgb(43, 123, 177);
-    height: 260px;  
-    margin-bottom: 24px;
-    border-radius:15px;
-}
-figure .color-5{
-    background-color: rgb(52, 109, 214);
-    height: 260px;  
-    margin-bottom: 24px;
-    border-radius:15px;
-}
-figure .color-6{
-    background-color: rgb(204, 147, 164);
-    height: 260px;  
-    margin-bottom: 24px;
-    border-radius:15px;
+.box div img{
+    width: 100%;  
+    border-radius: 25px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 /* section 3 */
@@ -98,8 +72,7 @@ article .box{
 }
 
 /* section 4 */
-.contact{
-    
+.contact{ 
     text-align: center;
     height: 400px;
 }
